# tech-trends-chatbot

./: README.md
backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  rag.ipynb  tests.ipynb
backend/app/: api.py  assistant.py  config.py  db.py  export.py  loader.py  local_assistant.py  main.py  openai.py  prompts.py  splitter.py  tools.py
backend/app/assistants/: assistant.py  local_assistant.py  prompts.py  tools.py
backend/app/utils/: splitter.py  sse_stream.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx  utils.js
frontend/src/components/: ChatInput.jsx  ChatMessages.jsx  Chatbot.jsx
frontend/src/hooks/: useAutoScroll.js
